# classroom_language

./: SimpleNeuralNetwork.txt  ast-Tree-syntax.txt
cudaMS/: CMakeLists.txt
cudaMS/includes/: cudaManager.cuh  cudaMemoryManager.cuh
cudaMS/src/: main.cu
interpreter/: CMakeLists.txt
interpreter-2/: CMakeLists.txt
interpreter-2/includes/: ast.hpp  ast_pointer.hpp  lexer.hpp  lexer_error.hpp  parser.hpp  scope.hpp  token.hpp
interpreter-2/src/: ast.cpp  ast_pointer.cpp  lexer.cpp  parser.cpp  scope.cpp
interpreter/includes/: ast.hpp  ast_pointer.hpp  ast_visitor.hpp  codeGenerator.hpp  interpreter.hpp  interpreter_error.hpp  lexer.hpp  parser.hpp  token.hpp
interpreter/src/: main.cpp  matrixM.txt
interpreter/working-dir/: CMakeLists.txt
interpreter/working-dir/includes/: cudaManager.hpp  cudaMemoryManager.hpp  matrix.hpp  neuralNFunctionsClass.hpp
interpreter/working-dir/lib/includes/: matrix.cuh
interpreter/working-dir/lib/src/: matrix.cu
interpreter/working-dir/src/: matrixM.cpp
interpreter/working-dir/tests/: CMakeLists.txt
interpreter/working-dir/tests/src/: main.cpp
matrixCuda/includes/: cudaKernelmanager.hpp  matrix.hpp
matrixCuda/lib/: CMakeLists.txt
matrixCuda/lib/includes/: matrix.cuh
matrixCuda/lib/src/: matrix.cu
matrixCuda/src/: matrixM.cpp  matrixMCuda.cu
